--- a/nopCommerce-release-4.50.3/src/Presentation/Nop.Web/Nop.Web.csproj
+++ b/nopCommerce-release-4.50.3/src/Presentation/Nop.Web/Nop.Web.csproj
@@ -45,6 +45,8 @@
 
     <!-- We copy the \Logs directory -->
     <Content Include="Logs\**" CopyToPublishDirectory="PreserveNewest" />
+    <None Remove="Plugins\Widgets.BSEmployee\Areas\Admin\Views\BSEmployee\_CreateOrUpdate.cshtml" />
+    <None Remove="Plugins\Widgets.BSEmployee\Areas\Admin\Views\BSEmployee\_CreateOrUpdate.Info.cshtml" />
 
     <None Update="Areas\Admin\sitemap.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -58,10 +60,6 @@
     in order to avoid the "Duplicate dll" error during publication. 
     We can also use “ExcludeConfigFilesFromBuildOutput” according to https://github.com/aspnet/AspNetCore/issues/14017 -->
     <Content Update="**\*.config;**\*.json" CopyToOutputDirectory="Never" CopyToPublishDirectory="PreserveNewest" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Plugins\" />
   </ItemGroup>
 
   <!-- This target execute after "Build" target.
