--- a/nopCommerce-release-4.50.3/src/Plugins/Nop.Plugin.Widgets.BSEmployee/Nop.Plugin.Widgets.BSEmployee.csproj
+++ b/nopCommerce-release-4.50.3/src/Plugins/Nop.Plugin.Widgets.BSEmployee/Nop.Plugin.Widgets.BSEmployee.csproj
@@ -24,6 +24,7 @@
     <None Remove="plugin.json" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Libraries\Nop.Services\Nop.Services.csproj" />
     <ProjectReference Include="..\..\Presentation\Nop.Web.Framework\Nop.Web.Framework.csproj" />
     <ProjectReference Include="..\..\Presentation\Nop.Web\Nop.Web.csproj">
       <Private>False</Private>
