--- a/nopCommerce-release-4.50.3/src/Plugins/Nop.Plugin.Payments.FlexiCards/Nop.Plugin.Payments.FlexiCards.csproj
+++ b/nopCommerce-release-4.50.3/src/Plugins/Nop.Plugin.Payments.FlexiCards/Nop.Plugin.Payments.FlexiCards.csproj
@@ -30,10 +30,10 @@
     <Content Include="Areas\Admin\Views\FlexiCards\Configure.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Areas\Admin\Views\FlexiCards\_ViewImports.cshtml">
+    <Content Include="Areas\Admin\Views\_ViewImports.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Areas\Admin\Views\FlexiCards\_ViewStart.cshtml">
+    <Content Include="Areas\Admin\Views\_ViewStart.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="logo.jpg">
